manifests/04-collabora-ingressroute.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"collabora-ingress","namespace":"nextcloud-system"},"spec":{"entryPoints":["websecure"],"routes":[{"kind":"Rule","match":"Host(`office.sengporkeat.com`)","services":[{"name":"collabora","port":9980}]}],"tls":{}}}
    creationTimestamp: "2026-08-22T04:13:40Z"
    generation: 1
    name: collabora-ingress
    namespace: nextcloud-system
    resourceVersion: "777838"
    uid: 3b32247a-78f3-4d22-8544-293263c23d9a
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`office.sengporkeat.com`)
      services:
      - name: collabora
        port: 9980
    tls: {}
- apiVersion: traefik.io/v1alpha1
  kind: IngressRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"IngressRoute","metadata":{"annotations":{},"name":"nextcloud-route","namespace":"nextcloud-system"},"spec":{"entryPoints":["web","websecure"],"routes":[{"kind":"Rule","match":"Host(`nextcloud.sengporkeat.com`) || Host(`office.sengporkeat.com`) || PathPrefix(`/`)","services":[{"name":"nextcloud-service","port":8080}]}],"tls":{}}}
    creationTimestamp: "2026-08-21T09:18:57Z"
    generation: 9
    name: nextcloud-route
    namespace: nextcloud-system
    resourceVersion: "1847490"
    uid: 0108e136-d127-4cf2-9294-8560b46f932f
  spec:
    entryPoints:
    - web
    - websecure
    routes:
    - kind: Rule
      match: Host("nextcloud.sengporkeat.com") || Host("10.1.16.200") || Host("10.1.16.11")
        || Host("10.1.16.12") || Host("10.1.16.13")
      services:
      - name: nextcloud-service
        port: 8080
        sticky:
          cookie:
            httpOnly: true
            name: nextcloud_session_sticky
            secure: true
kind: List
metadata:
  resourceVersion: ""
